modified menu and added blank pages for content

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <body>
       <iframe name="header" scrolling="no" id="header" class="frame" src="header.html"></iframe>
       <iframe name="menu" id="menu" class="frame" src="menu.html"></iframe>
+      <iframe name="content" id="content" class="frame" src="home.html"></iframe>
     <div id="root"></div>
     <div id="footer"></div>
   </body>
