--- a/public/menu.html
+++ b/public/menu.html
@@ -8,10 +8,10 @@
     <table style="margin-left:auto; margin-right:auto;">
         <tbody>
             <tr>
-                <td> Home </td>
-                <td> Proiecte </td>
-                <td> LegisLand </td>
-                <td> Contact </td>
+                <td> <a href="home.html" target="content"> Home </a> </td>
+                <td> <a href="proiecte.html" target="content"> Proiecte </a> </td>
+                <td> <a href="legisland.html" target="content"> LegisLand </a> </td>
+                <td> <a href="contact.html" target="content"> Contact</a> </td>
             </tr>
         </tbody>
     </table>
