--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
   <head>
     <meta charset="utf-8" />
     <title>VFF</title>
@@ -7,9 +7,9 @@
   </head>
   <body>
       <iframe name="header" scrolling="no" id="header" class="frame" src="header.html"></iframe>
-      <iframe name="menu" id="menu" class="frame" src="menu.html"></iframe>
-      <iframe name="content" id="content" class="frame" src="home.html"></iframe>
-    <div id="root"></div>
-    <div id="footer"></div>
+      <iframe name="menu" scrolling="no" id="menu" class="frame" src="menu.html"></iframe>
+      <iframe name="content" id="content" class="frame" src="acasa.html"></iframe>
+      <div id="root"></div>
+      <iframe name="footer" scrolling="no" id="footer" class="frame" src="footer.html"></iframe>
   </body>
 </html>
