--- a/public/header.html
+++ b/public/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../css/main.css">
@@ -8,7 +8,7 @@
     <table style="margin-left:auto; margin-right:auto;">
         <tbody>
         <tr>
-            <td> <img src="images/vff-logo.png" alt="Logo" width="50" /> </td>
+            <td> <img src="images/vff-logo.png" alt="Logo" width="50vw" /> </td>
             <td> <h1> Vacanțe Fără Frontiere </h1> </td>
         </tr>
         </tbody>
