--- a/public/menu.html
+++ b/public/menu.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../css/menu.css">
   </head>
   <body>
-    <table style="margin-left:auto; margin-right:auto;">
-        <tbody>
-            <tr>
-                <td> <a href="home.html" target="content"> Home </a> </td>
-                <td> <a href="proiecte.html" target="content"> Proiecte </a> </td>
-                <td> <a href="legisland.html" target="content"> LegisLand </a> </td>
-                <td> <a href="contact.html" target="content"> Contact</a> </td>
-            </tr>
-        </tbody>
-    </table>
+    <div id="menu">
+      <td> <a href="acasa.html" target="content">  Home </a> </td>
+      <td> <a href="proiecte.html" target="content"> Proiecte </a> </td>
+      <td> <a href="legisland.html" target="content"> LegisLand </a> </td>
+      <td> <a href="contact.html" target="content"> Contact</a> </td>
+    </div>
   </body>
 </html>
