--- a/public/proiecte.html
+++ b/public/proiecte.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    Welcome to Proiecte!
+    <div id="welcome"> Welcome to Proiecte </div>
+    <div id="projectsRoot"></div>
+    <script src="./src/index.js"> </script>
   </body>
 </html>
